<resources>
    <string name="app_name">Basic Test</string>
    <string name="upcoming_page_title">Upcoming book list for America</string>
    <string name="label_name">Name:</string>
    <string name="label_start_date">Start date:</string>
    <string name="label_end_date">End date:</string>
    <string name="error_message">Error loading data. Please try again!!</string>
    <string name="retry">Retry</string>
</resources>