<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:layout_margin="5dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            tools:background="@color/black"
            tools:ignore="ContentDescription"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loading_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/logo"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintBottom_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="@id/logo">

            <View
                android:id="@+id/placeholder_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_placeholder" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/label_name"
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/LabelTextViewStyle"
            android:text="@string/label_name"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="3"
            tools:text="Bildungstage"
            app:layout_constraintTop_toTopOf="@id/label_name"
            app:layout_constraintStart_toEndOf="@id/label_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/label_start_date"
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/LabelTextViewStyle"
            android:text="@string/label_start_date"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="@id/label_name" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="May 08, 2022"
            app:layout_constraintTop_toTopOf="@id/label_start_date"
            app:layout_constraintStart_toEndOf="@id/label_start_date"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/label_end_date"
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/LabelTextViewStyle"
            android:text="@string/label_end_date"
            app:layout_constraintTop_toBottomOf="@id/label_start_date"
            app:layout_constraintStart_toStartOf="@id/label_name" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="May 09, 2022"
            app:layout_constraintTop_toTopOf="@id/label_end_date"
            app:layout_constraintStart_toEndOf="@id/label_end_date"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>